fix(color): adjust outline and gradient for better visibility
Reduce the opacity of the outline for the current menu item and adjust the gradient
background for the account cover to improve the overall color contrast and appearance.

--- a/style/features/colorful-asri.scss
+++ b/style/features/colorful-asri.scss
@@ -223,7 +223,7 @@
                 }
 
                 &.b3-menu__item--current svg {
-                    outline: 1px solid #fffa;
+                    outline: 1px solid oklch(from var(--b3-theme-on-primary) l c h / .5);
                 }
             }
         }
@@ -236,7 +236,7 @@
                 }
 
                 &.b3-menu__item--current svg {
-                    outline: 1px solid #fffa;
+                    outline: 1px solid oklch(from var(--b3-theme-on-primary) l c h / .5);
                 }
             }
 
@@ -335,7 +335,7 @@
     .config-account__cover[style="background-image: url()"] {
         // background-color: oklch(from var(--b3-theme-primary) l c h / 0.3) !important;
         background-color: unset !important;
-        background: radial-gradient(circle at bottom, oklch(from var(--b3-theme-primary) l calc(c * 1.05) calc(h + 30) / .2) 15%, oklch(from var(--b3-theme-primary) l c h / .3) 85%) !important;
+        background: radial-gradient(circle at bottom, oklch(from var(--b3-theme-primary) l calc(c * 1.05) h / .5) 30%, oklch(from var(--b3-theme-primary) l calc(c * 1.1) calc(h + 30) / .3) 85%) !important;
     }
 
     // other 
